Advanced Guide and Practical MDO

--- a/practice-1.ipynb
+++ b/practice-1.ipynb
@@ -212,6 +212,521 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### There are a few general cases when you need a solver for your system; 1) when you have any sort of feedback coupling between subsystems, and 2) when you have a while loop within an analysis, which essentially creates an implicit system.\n",
+    "\n",
+    "#### When you have feedback coupling in your model, you need to use a solver. Feedback coupling maybe removed by reordering subsystems in the model.\n",
+    "\n",
+    "#### `While` loop is considered an implicit system. Need a solver for implicit systems."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6744.80s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "! openmdao n2 test_n2.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "480.13s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
+      "INFO: checking auto_ivc_warnings\n",
+      "INFO: checking comp_has_no_outputs\n",
+      "INFO: checking dup_inputs\n",
+      "INFO: checking missing_recorders\n",
+      "WARNING: The Problem has no recorder of any kind attached\n",
+      "INFO: checking out_of_order\n",
+      "INFO: checking solvers\n",
+      "INFO: checking system\n",
+      "INFO: checking unserializable_options\n"
+     ]
+    }
+   ],
+   "source": [
+    "! openmdao check test_n2.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7461.65s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
+      "INFO: checking auto_ivc_warnings\n",
+      "INFO: checking comp_has_no_outputs\n",
+      "INFO: checking dup_inputs\n",
+      "INFO: checking missing_recorders\n",
+      "WARNING: The Problem has no recorder of any kind attached\n",
+      "INFO: checking out_of_order\n",
+      "INFO: checking solvers\n",
+      "WARNING: Group 'sellar_mda.cycle' contains cycles [['d1', 'd2']], but does not have an iterative nonlinear solver.\n",
+      "WARNING: Group 'sellar_mda.cycle' contains cycles [['d1', 'd2']], but does not have an iterative linear solver.\n",
+      "INFO: checking system\n",
+      "INFO: checking unserializable_options\n"
+     ]
+    }
+   ],
+   "source": [
+    "! openmdao check sellar_example.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7539.75s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "! openmdao n2 sellar_example.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 Explicit Output(s) in 'model'\n",
+      "\n",
+      "varname     val           \n",
+      "----------  --------------\n",
+      "sellar_mda\n",
+      "  cycle\n",
+      "    d1\n",
+      "      y1    [27.8]        \n",
+      "    d2\n",
+      "      y2    [12.27257053] \n",
+      "  obj_cmp\n",
+      "    obj     [30.80000468] \n",
+      "  con_cmp1\n",
+      "    con1    [-24.64]      \n",
+      "  con_cmp2\n",
+      "    con2    [-11.72742947]\n",
+      "\n",
+      "\n",
+      "0 Implicit Output(s) in 'model'\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openmdao.api as om\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "class SellarDis1(om.ExplicitComponent):\n",
+    "    def setup(self):\n",
+    "        self.add_input('z', val=np.zeros(2))\n",
+    "        self.add_input('x', val=0.)\n",
+    "        self.add_input('y2', val=1.0)\n",
+    "        self.add_output('y1', val=1.0)\n",
+    "        self.declare_partials('*', '*', method='fd')\n",
+    "\n",
+    "    def compute(self, inputs, outputs):\n",
+    "        z1 = inputs['z'][0]\n",
+    "        z2 = inputs['z'][1]\n",
+    "        x1 = inputs['x']\n",
+    "        y2 = inputs['y2']\n",
+    "\n",
+    "        outputs['y1'] = z1**2 + z2 + x1 - 0.2*y2\n",
+    "\n",
+    "class SellarDis2(om.ExplicitComponent):\n",
+    "    def setup(self):\n",
+    "        self.add_input('z', val=np.zeros(2))\n",
+    "        self.add_input('y1', val=1.0)\n",
+    "        self.add_output('y2', val=1.0)\n",
+    "        self.declare_partials('*', '*', method='fd')\n",
+    "\n",
+    "    def compute(self, inputs, outputs):\n",
+    "        z1 = inputs['z'][0]\n",
+    "        z2 = inputs['z'][1]\n",
+    "        y1 = inputs['y1']\n",
+    "\n",
+    "        outputs['y2'] = y1**.5 + z1 + z2\n",
+    "\n",
+    "class SellarMDA(om.Group):\n",
+    "    def setup(self):\n",
+    "        cycle = self.add_subsystem('cycle', om.Group(), promotes=['*'])\n",
+    "        cycle.add_subsystem('d1', SellarDis1(), promotes_inputs=['x', 'z', 'y2'],\n",
+    "                            promotes_outputs=['y1'])\n",
+    "        cycle.add_subsystem('d2', SellarDis2(), promotes_inputs=['z', 'y1'],\n",
+    "                            promotes_outputs=['y2'])\n",
+    "\n",
+    "        cycle.set_input_defaults('x', 1.0)\n",
+    "        cycle.set_input_defaults('z', np.array([5.0, 2.0]))\n",
+    "\n",
+    "        self.add_subsystem('obj_cmp', om.ExecComp('obj = x**2 + z[1] + y1 + exp(-y2)',\n",
+    "                                                  z=np.array([0.0, 0.0]), x=0.0),\n",
+    "                           promotes=['x', 'z', 'y1', 'y2', 'obj'])\n",
+    "\n",
+    "        self.add_subsystem('con_cmp1', om.ExecComp('con1 = 3.16 - y1'), promotes=['con1', 'y1'])\n",
+    "        self.add_subsystem('con_cmp2', om.ExecComp('con2 = y2 - 24.0'), promotes=['con2', 'y2'])\n",
+    "        \n",
+    "prob = om.Problem()\n",
+    "model = prob.model\n",
+    "\n",
+    "model.add_subsystem('sellar_mda', SellarMDA())\n",
+    "prob.setup()\n",
+    "\n",
+    "om.n2(prob, outfile=\"coupled_no_solver.html\", display_in_notebook=False)\n",
+    "prob.run_model()\n",
+    "prob.model.list_outputs();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==========\n",
+      "sellar_mda\n",
+      "==========\n",
+      "NL: NLBGS 1 ; 50.5247285 1\n",
+      "NL: NLBGS 2 ; 3.91711889 0.0775287471\n",
+      "NL: NLBGS 3 ; 0.0758730639 0.00150170157\n",
+      "NL: NLBGS 4 ; 0.00150052731 2.96988693e-05\n",
+      "NL: NLBGS 5 ; 2.96633139e-05 5.87104865e-07\n",
+      "NL: NLBGS 6 ; 5.86406806e-07 1.16063327e-08\n",
+      "NL: NLBGS 7 ; 1.15925306e-08 2.2944271e-10\n",
+      "NL: NLBGS 8 ; 2.29166181e-10 4.53572316e-12\n",
+      "NL: NLBGS Converged\n",
+      "5 Explicit Output(s) in 'model'\n",
+      "\n",
+      "varname     val           \n",
+      "----------  --------------\n",
+      "sellar_mda\n",
+      "  cycle\n",
+      "    d1\n",
+      "      y1    [25.58830237] \n",
+      "    d2\n",
+      "      y2    [12.05848815] \n",
+      "  obj_cmp\n",
+      "    obj     [28.58830817] \n",
+      "  con_cmp1\n",
+      "    con1    [-22.42830237]\n",
+      "  con_cmp2\n",
+      "    con2    [-11.94151185]\n",
+      "\n",
+      "\n",
+      "0 Implicit Output(s) in 'model'\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob = om.Problem()\n",
+    "model = prob.model\n",
+    "\n",
+    "model.add_subsystem('sellar_mda', SellarMDA())\n",
+    "prob.setup()\n",
+    "\n",
+    "# Nonlinear Block Gauss Seidel is a gradient free solver\n",
+    "nlbgs = model.sellar_mda.nonlinear_solver = om.NonlinearBlockGS()\n",
+    "nlbgs.options[\"iprint\"] = 2  # change the print to show the residuals\n",
+    "nlbgs.options[\"maxiter\"] = 50  # limit the maximum number of solver iterations\n",
+    "nlbgs.options[\"atol\"] = 1.e-9  # set the absolute tolerance for convergence\n",
+    "\n",
+    "om.n2(prob, outfile=\"coupled_with_solver.html\", display_in_notebook=False)\n",
+    "prob.run_model()\n",
+    "prob.model.list_outputs();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==========\n",
+      "sellar_mda\n",
+      "==========\n",
+      "NL: NLBGS 1 ; 50.5247285 1\n",
+      "NL: NLBGS 2 ; 3.91711889 0.0775287471\n",
+      "NL: NLBGS 3 ; 0.0744313595 0.00147316694\n",
+      "NL: NLBGS 4 ; 2.9722743e-05 5.88281104e-07\n",
+      "NL: NLBGS 5 ; 1.16801147e-08 2.31176199e-10\n",
+      "NL: NLBGS 6 ; 2.21703753e-10 4.38802462e-12\n",
+      "NL: NLBGS Converged\n",
+      "5 Explicit Output(s) in 'model'\n",
+      "\n",
+      "varname     val           \n",
+      "----------  --------------\n",
+      "sellar_mda\n",
+      "  cycle\n",
+      "    d1\n",
+      "      y1    [25.58830237] \n",
+      "    d2\n",
+      "      y2    [12.05848815] \n",
+      "  obj_cmp\n",
+      "    obj     [28.58830817] \n",
+      "  con_cmp1\n",
+      "    con1    [-22.42830237]\n",
+      "  con_cmp2\n",
+      "    con2    [-11.94151185]\n",
+      "\n",
+      "\n",
+      "0 Implicit Output(s) in 'model'\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob = om.Problem()\n",
+    "model = prob.model\n",
+    "\n",
+    "model.add_subsystem('sellar_mda', SellarMDA())\n",
+    "prob.setup()\n",
+    "\n",
+    "# Nonlinear Block Gauss Seidel is a gradient free solver\n",
+    "nlbgs = model.sellar_mda.nonlinear_solver = om.NonlinearBlockGS()\n",
+    "nlbgs.options[\"iprint\"] = 2  # change the print to show the residuals\n",
+    "nlbgs.options[\"maxiter\"] = 50  # limit the maximum number of solver iterations\n",
+    "nlbgs.options[\"atol\"] = 1.e-9  # set the absolute tolerance for convergence\n",
+    "nlbgs.options[\"use_aitken\"] = True\n",
+    " \n",
+    "prob.run_model()\n",
+    "prob.model.list_outputs();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==========\n",
+      "sellar_mda\n",
+      "==========\n",
+      "NL: Newton 0 ; 2.25451411 1\n",
+      "NL: Newton 1 ; 5.8309261e-05 2.58633383e-05\n",
+      "NL: Newton 2 ; 0.000862032337 0.000382358369\n",
+      "NL: Newton 3 ; 1.6727336e-05 7.41948606e-06\n",
+      "NL: Newton 4 ; 1.27465221e-08 5.65377791e-09\n",
+      "NL: Newton 5 ; 6.78410217e-09 3.00911942e-09\n",
+      "NL: Newton 6 ; 1.2648016e-10 5.61008509e-11\n",
+      "NL: Newton Converged\n",
+      "5 Explicit Output(s) in 'model'\n",
+      "\n",
+      "varname     val           \n",
+      "----------  --------------\n",
+      "sellar_mda\n",
+      "  cycle\n",
+      "    d1\n",
+      "      y1    [25.58830237] \n",
+      "    d2\n",
+      "      y2    [12.05848815] \n",
+      "  obj_cmp\n",
+      "    obj     [28.58830817] \n",
+      "  con_cmp1\n",
+      "    con1    [-22.42830237]\n",
+      "  con_cmp2\n",
+      "    con2    [-11.94151185]\n",
+      "\n",
+      "\n",
+      "0 Implicit Output(s) in 'model'\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob = om.Problem()\n",
+    "model = prob.model\n",
+    "\n",
+    "model.add_subsystem('sellar_mda', SellarMDA())\n",
+    "prob.setup()\n",
+    "\n",
+    "newton = model.sellar_mda.nonlinear_solver = om.NewtonSolver(solve_subsystems=True)\n",
+    "newton.options[\"iprint\"] = 2  # change the print to show the residuals\n",
+    "newton.options[\"maxiter\"] = 50  # limit the maximum number of solver iterations\n",
+    "newton.options[\"atol\"] = 1.e-9  # set the absolute tolerance for convergence\n",
+    " \n",
+    "prob.run_model()\n",
+    "prob.model.list_outputs();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==========\n",
+      "sellar_mda\n",
+      "==========\n",
+      "NL: Newton 0 ; 2.25451411 1\n",
+      "NL: Newton 1 ; 5.8309261e-05 2.58633383e-05\n",
+      "NL: Newton 2 ; 1.02607101e-06 4.55118472e-07\n",
+      "NL: Newton 3 ; 2.025957e-08 8.98622456e-09\n",
+      "NL: Newton 4 ; 4.00021349e-10 1.77431291e-10\n",
+      "NL: Newton Converged\n",
+      "5 Explicit Output(s) in 'model'\n",
+      "\n",
+      "varname     val           \n",
+      "----------  --------------\n",
+      "sellar_mda\n",
+      "  cycle\n",
+      "    d1\n",
+      "      y1    [25.58830237] \n",
+      "    d2\n",
+      "      y2    [12.05848815] \n",
+      "  obj_cmp\n",
+      "    obj     [28.58830816] \n",
+      "  con_cmp1\n",
+      "    con1    [-22.42830237]\n",
+      "  con_cmp2\n",
+      "    con2    [-11.94151185]\n",
+      "\n",
+      "\n",
+      "0 Implicit Output(s) in 'model'\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob = om.Problem()\n",
+    "model = prob.model\n",
+    "\n",
+    "model.add_subsystem('sellar_mda', SellarMDA())\n",
+    "prob.setup()\n",
+    "\n",
+    "newton = model.sellar_mda.nonlinear_solver = om.NewtonSolver(solve_subsystems=True)\n",
+    "newton.options[\"iprint\"] = 2  # change the print to show the residuals\n",
+    "newton.options[\"maxiter\"] = 50  # limit the maximum number of solver iterations\n",
+    "newton.options[\"atol\"] = 1.e-9  # set the absolute tolerance for convergence\n",
+    "newton.linesearch = om.ArmijoGoldsteinLS()\n",
+    " \n",
+    "prob.run_model()\n",
+    "prob.model.list_outputs();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==========\n",
+      "sellar_mda\n",
+      "==========\n",
+      "NL: Newton 0 ; 36.8229305 1\n",
+      "NL: Newton 1 ; 12.2837727 0.333590307\n",
+      "NL: Newton 2 ; 6.0606187 0.164588169\n",
+      "NL: Newton 3 ; 2.14967189 0.0583786207\n",
+      "NL: Newton 4 ; 0.227624537 0.00618159756\n",
+      "NL: Newton 5 ; 0.0642920936 0.00174597982\n",
+      "NL: Newton 6 ; 0.00611849532 0.000166159924\n",
+      "NL: Newton 7 ; 0.0015263487 4.14510382e-05\n",
+      "NL: Newton 8 ; 0.00018041202 4.89944765e-06\n",
+      "NL: Newton 9 ; 3.73164117e-05 1.01340146e-06\n",
+      "NL: Newton 10 ; 5.04139962e-06 1.36909245e-07\n",
+      "NL: Newton 11 ; 9.37031206e-07 2.54469482e-08\n",
+      "NL: Newton 12 ; 1.36709744e-07 3.71262531e-09\n",
+      "NL: Newton 13 ; 2.3929104e-08 6.49842468e-10\n",
+      "NL: Newton 14 ; 3.64867603e-09 9.90870628e-11\n",
+      "NL: Newton 15 ; 6.17305318e-10 1.67641551e-11\n",
+      "NL: Newton Converged\n",
+      "5 Explicit Output(s) in 'model'\n",
+      "\n",
+      "varname     val           \n",
+      "----------  --------------\n",
+      "sellar_mda\n",
+      "  cycle\n",
+      "    d1\n",
+      "      y1    [25.58830237] \n",
+      "    d2\n",
+      "      y2    [12.05848815] \n",
+      "  obj_cmp\n",
+      "    obj     [28.58830817] \n",
+      "  con_cmp1\n",
+      "    con1    [-22.42830237]\n",
+      "  con_cmp2\n",
+      "    con2    [-11.94151185]\n",
+      "\n",
+      "\n",
+      "0 Implicit Output(s) in 'model'\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob = om.Problem()\n",
+    "model = prob.model\n",
+    "\n",
+    "model.add_subsystem('sellar_mda', SellarMDA())\n",
+    "prob.setup()\n",
+    "\n",
+    "newton = model.sellar_mda.nonlinear_solver = om.NewtonSolver(solve_subsystems=False)\n",
+    "newton.options[\"iprint\"] = 2  # change the print to show the residuals\n",
+    "newton.options[\"maxiter\"] = 50  # limit the maximum number of solver iterations\n",
+    "newton.options[\"atol\"] = 1.e-9  # set the absolute tolerance for convergence\n",
+    "newton.options[\"rtol\"] = 1.e-15  # set the absolute tolerance for convergence\n",
+    "\n",
+    "prob.run_model()\n",
+    "prob.model.list_outputs();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
