one step closer

--- a/OpenMDAO-examples.ipynb
+++ b/OpenMDAO-examples.ipynb
@@ -242,21 +242,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/core/system.py\", line 3754, in get_design_vars\n",
-      "    in_abs = pro2abs_in[name][0]\n",
-      "             ~~~~~~~~~~^^^^^^\n",
-      "KeyError: 'propulsion.motor.P_out'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
       "Traceback (most recent call last):\n",
       "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/bin/openmdao\", line 8, in <module>\n",
       "    sys.exit(openmdao_cmd())\n",
@@ -268,25 +260,20 @@
       "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/utils/file_utils.py\", line 196, in _load_and_exec\n",
       "    exec(code, globals_dict)  # nosec: private, internal use only\n",
       "    ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"test2.py\", line 156, in <module>\n",
+      "  File \"test2.py\", line 226, in <module>\n",
       "    prob.setup()\n",
       "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/core/problem.py\", line 958, in setup\n",
       "    self._check_collected_errors()\n",
-      "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/utils/hooks.py\", line 130, in execute_hooks\n",
-      "    _run_hooks(pre_hooks, inst)\n",
-      "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/utils/hooks.py\", line 96, in _run_hooks\n",
-      "    hook(inst, **kwargs)\n",
-      "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/visualization/n2_viewer/n2_viewer.py\", line 723, in _view_model_w_errors\n",
-      "    n2(prob, outfile=options.outfile, show_browser=not options.no_browser,\n",
-      "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/visualization/n2_viewer/n2_viewer.py\", line 593, in n2\n",
-      "    model_data = _get_viewer_data(data_source, case_id=case_id)\n",
-      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/visualization/n2_viewer/n2_viewer.py\", line 556, in _get_viewer_data\n",
-      "    data_dict['design_vars'] = root_group.get_design_vars(use_prom_ivc=False)\n",
-      "                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/core/system.py\", line 3767, in get_design_vars\n",
-      "    raise RuntimeError(msg.format(self.msginfo, str(err)))\n",
-      "RuntimeError: <model> <class Group>: Output not found for design variable 'propulsion.motor.P_out'.\n"
+      "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/utils/hooks.py\", line 131, in execute_hooks\n",
+      "    ret = f(*args, **kwargs)\n",
+      "          ^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/core/problem.py\", line 585, in _check_collected_errors\n",
+      "    raise exc_type('\\n'.join(final_msg)).with_traceback(tback)\n",
+      "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/core/group.py\", line 1484, in _setup_global_connections\n",
+      "    self._collect_error(msg)\n",
+      "RuntimeError: \n",
+      "Collected errors for problem 'openmdao':\n",
+      "   <model> <class Group>: Attempted to connect from 'P_req_shaft' to 'propulsion.motor.P_req_shaft', but 'propulsion.motor.P_req_shaft' doesn't exist. Perhaps you meant to connect to one of the following inputs: ['propulsion.P_req_shaft'].\n"
      ]
     }
    ],
