all independent var comps connected to self.inputs

--- a/OpenMDAO-examples.ipynb
+++ b/OpenMDAO-examples.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,20 +260,19 @@
       "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/utils/file_utils.py\", line 196, in _load_and_exec\n",
       "    exec(code, globals_dict)  # nosec: private, internal use only\n",
       "    ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"test2.py\", line 226, in <module>\n",
+      "  File \"test2.py\", line 230, in <module>\n",
       "    prob.setup()\n",
       "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/core/problem.py\", line 958, in setup\n",
       "    self._check_collected_errors()\n",
       "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/utils/hooks.py\", line 131, in execute_hooks\n",
       "    ret = f(*args, **kwargs)\n",
       "          ^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/core/problem.py\", line 585, in _check_collected_errors\n",
-      "    raise exc_type('\\n'.join(final_msg)).with_traceback(tback)\n",
-      "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/core/group.py\", line 1484, in _setup_global_connections\n",
-      "    self._collect_error(msg)\n",
+      "  File \"/Users/h1he2li3/opt/anaconda3/envs/dymos_rangemax/lib/python3.11/site-packages/openmdao/core/problem.py\", line 587, in _check_collected_errors\n",
+      "    raise RuntimeError('\\n'.join(final_msg))\n",
       "RuntimeError: \n",
       "Collected errors for problem 'openmdao':\n",
-      "   <model> <class Group>: Attempted to connect from 'P_req_shaft' to 'propulsion.motor.P_req_shaft', but 'propulsion.motor.P_req_shaft' doesn't exist. Perhaps you meant to connect to one of the following inputs: ['propulsion.P_req_shaft'].\n"
+      "   <model> <class Group>: Attempted to connect from 'C_rate' to 'power.battery.C_rate_batt', but 'C_rate' doesn't exist. Perhaps you meant to connect to one of the following outputs: ['C_rate_batt'].\n",
+      "   <model> <class Group>: Attempted to connect from 'C_rate' to 'mass.total_mass.C_rate_batt', but 'C_rate' doesn't exist. Perhaps you meant to connect to one of the following outputs: ['C_rate_batt'].\n"
      ]
     }
    ],
